Change from generic Items to Log Entries.
